Fix color contrast

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ header h1{
     text-decoration: none;
     font-size: medium;
     color: white;
-    background-color: rgb(68, 68, 68);
+    background-color: rgb(39, 39, 39);
 }
 
 main h2{
@@ -219,7 +219,7 @@ figure:hover > .caption{
 
 #gallery_content p{
     font-family: 'Rock Salt', cursive;
-    background: rgb(233, 233, 233);
+    background: rgb(255, 255, 255);
     padding: .2em .5em;
     line-height: 3;
     font-weight: bold;
